--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <style="css">
-    body { font-family: sans-serif; }
+    body { font-family:'derp'; }
     p { font-family: 'courier'; }
   </style>
   </head>
