--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
-  <style>
-    body { font-family:'derp'; }
-    p { font-family: 'courier'; }
-  </style>
+    <style>
+      p {color:red;}
+    </style>
   </head>
   <body>
-  <p>Hello, world!</p>
+    <p>Hello, world!</p>
   </body>
 </html>
