--- a/index.html
+++ b/index.html
@@ -55,8 +55,22 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-3">Fluid jumbotron</h1>
+        <h1 class="display-3">Online Video Editing</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <div class="btn-group">
+          <button type="button" class="btn btn-success">Action</button>
+          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="container">
