--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
       <div class="container">
         <h1 class="display-3">Online Video Editing</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <!-- Single button -->
         <div class="btn-group">
-          <button type="button" class="btn btn-success">Action</button>
-          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Action <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
