--- a/index.html
+++ b/index.html
@@ -57,16 +57,13 @@
       <div class="container">
         <h1 class="display-3">Online Video Editing</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        <!-- Single button -->
-        <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Action <span class="caret"></span>
+        <div class="btn-group btn-success">
+          <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Large button <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li>Derp</li>
+            <li>DerpDerp</li>
           </ul>
         </div>
       </div>
