--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">WeVideo</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -57,15 +57,12 @@
       <div class="container">
         <h1 class="display-3">Online Video Editing</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        <div class="btn-group btn-success">
-          <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Large button <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li>Derp</li>
-            <li>DerpDerp</li>
-          </ul>
-        </div>
+      </div>
+      <button type="button" class="btn btn-success">Sign Up</button>
+      <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-default">&xf082;</button>
+        <button type="button" class="btn btn-default">Middle</button>
+        <button type="button" class="btn btn-default">Right</button>
       </div>
     </div>
     <div class="container">
