--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
     <div class="container">
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <div class="row">
+          <div class="col-md-4">This</div>
+          <div class="col-md-4">That</div>
+          <div class="col-md-4">Other</div>
+        </div>
       </div>
 
     </div><!-- /.container -->
