--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-3">Online Video Editing</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <p class="lead">Get started with WeVideo by creating an account or signing in.</p>
       </div>
-      <button type="button" class="btn btn-success">Sign Up</button>
       <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default">&xf082;</button>
-        <button type="button" class="btn btn-default">Middle</button>
-        <button type="button" class="btn btn-default">Right</button>
+        <button type="button" class="btn btn-default"><i class="fa fa-envelope" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-default"><i class="fa fa-facebook" aria-hidden="true"></i></button>
+        <button type="button" class="btn btn-default"><i class="fa fa-google-plus" aria-hidden="true"></i></button>
       </div>
     </div>
     <div class="container">
