--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <div class="row">
-          <div class="col-md-4">This</div>
-          <div class="col-md-4">That</div>
-          <div class="col-md-4">Other</div>
+          <div class="col-md-4">
+            <h2>Upload</h2>
+            <p>Bacon ipsum dolor amet cow turducken pork chop ball tip.</p>
+          </div>
+          <div class="col-md-4">
+            <h2>Edit</h2>
+            <p>Bacon ipsum dolor amet cow turducken pork chop ball tip.</p>
+          </div>
+          <div class="col-md-4">
+            <h2>Export</h2>
+            <p>Bacon ipsum dolor amet cow turducken pork chop ball tip.</p>
+          </div>
         </div>
       </div>
 
